[tool.poetry]
name = "dup-file-finder"
version = "0.1.0"
description = "Search for duplicate files based on extension."
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dup_file_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
fleep = "^1.0.1"
rich = "^12.6.0"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
