[tool.poetry]
name = "dup-file-finder"
version = "0.1.0"
description = "Scans directory tree and returns duplicate entries."
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dup_file_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
rich = "^13.3.5"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
